...
          create: (context) =>
              AuthenticationBloc(authRepository: authRepository)
                ..add(AppStarted()),
          child: BlocBuilder<AuthenticationBloc, AuthenticationState>(
              builder: (context, state) {
            if (state is AuthenticationUnauthenticated) {
              (context).goNamed('signin');
              return Container();
            } else {
              return Padding(
                  padding: const EdgeInsets.fromLTRB(30.0, 8.0, 30.0, 8.0),
                  child: Form(
                    key: _formkey,
                    child: ListView(
                      children: [
                        TextFormField(
                          key: Key('Name'),
                            initialValue: widget.args.edit
                                ? widget.args.compound?.name
                                : '',
                            validator: (value) {
                              if (value != null && value.isEmpty) {
                                return 'Please enter the name';
...
                                () {
                                  _compound['name'] = value;
                                },
                              );
                            }),
                        TextFormField(
                           key: Key('Region'),
                            initialValue: widget.args.edit
                                ? widget.args.compound?.Region
                                : '',
                            validator: (value) {
                              if (value != null && value.isEmpty) {
                                return 'Please enter the region';
...
                                () {
                                  _compound['Region'] = value;
                                },
                              );
                            }),
                        TextFormField(
                           key: Key("Wereda"),
                            initialValue: widget.args.edit
                                ? widget.args.compound?.Wereda
                                : '',
                            validator: (value) {
                              if (value != null && value.isEmpty) {
                                return 'Pease enter wereda';
...
                                () {
                                  _compound['Wereda'] = value;
                                },
                              );
                            }),
                        TextFormField(
                          key: Key('Zone'),
                            initialValue: widget.args.edit
                                ? widget.args.compound?.Wereda
                                : '',
                            validator: (value) {
                              if (value != null && value.isEmpty) {
                                return 'please enter zone';
...
                              if (value != null && value.isEmpty) {
                                return 'Please enter kebele';
                              }
                              return null;
                            },
                            decoration:
                                const InputDecoration(labelText: 'Kebele'),
                            onSaved: (value) {
                              setState(
                                () {
                                  _compound['Kebele'] = value;
                                },
                              );
...
                            if (value != null && value.isEmpty) {
                              return 'Please enter price per slot';
                            }
                            return null;
                          },
                          decoration: const InputDecoration(
                              labelText: 'Price Per Slot'),
                          onSaved: (value) {
                            setState(
                              () {
                                _compound['SlotPricePerHour'] = value;
                              },
                            );
                          },
                        ),
                        TextFormField(
                          key:Key('Available Spots'),
                          initialValue: widget.args.edit
                              ? widget.args.compound?.totalSpots.toString()
                              : '',
                          validator: (value) {
                            if (value != null && value.isEmpty) {
                              return 'Please enter total spots';
                            }
                            return null;
                          },
                          decoration:
                              const InputDecoration(labelText: 'Total Spots'),
                          onSaved: (value) {
                            setState(
                              () {
                                _compound['totalSpots'] = value;
                              },
                            );
...
                                _compound['availableSpots'] = value;
                              },
                            );
                          },
                        ),
                        ElevatedButton(
                            key: Key('savecompound'),
                            onPressed: () async {},
                            child: const Text('Pick Compound Image')),
                        Padding(
                            padding: const EdgeInsets.symmetric(vertical: 16.0),
                            child: ElevatedButton.icon(
                              onPressed: () {
...
